@@ -1,0 +1,16 @@
+
+tmpdir/i135409-3.x:     file format elf32-.*
+
+Disassembly of section .text:
+
+0+0 <_func>:
+   0:	25 1f 00[ 	]+mov	31,a1
+   3:	cb[ 	]+nop	
+
+0+04 <A>:
+   4:	25 1f 00[ 	]+mov	31,a1
+   7:	cb[ 	]+nop	
+
+0+08 <BOTTOM>:
+   8:	e1[ 	]+add	d0,d1
+#pass
